# Multiprocessing-Programming-Exercise

./: CMakeLists.txt  Readme.md
code/: main.cpp
code_opencl/: lodepng.cpp  main.cpp  main.h
code_openmp/: main.cpp  main.h
